--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -23,6 +23,14 @@
 # Set project name
 project (Urho3D)
 
+IF(CMAKE_CXX_COMPILER MATCHES cl.exe)
+    ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS -D_CRT_NONSTDC_NO_DEPRECATE -D_SCL_SECURE_NO_WARNINGS)
+ELSE()
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -std=c++1y -pedantic -Wno-extended-offsetof" )
+    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra" )
+    add_definitions(-D__STDC_FORMAT_MACROS) #-D_GLIBCXX_DEBUG
+ENDIF()
+
 # Set minimum version
 cmake_minimum_required (VERSION 2.8.6)
 
